# atuin-fullhistory

./: CLAUDE.md  Cargo.toml  README.md
src/: input.rs  local_db.rs  main.rs  memory_db.rs  sort.rs  types.rs
src/tui/: cursor.rs  history_list.rs  inspector.rs  interactive.rs  mod.rs
src/tui/engines/: db.rs  mod.rs  skim.rs
src/tui/keybindings/: defaults.rs
